Partial graph-based-slam post

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,18 +2,33 @@
 ---
 
 @inproceedings{Sharma21icra,
-   abbr={ICRA},
-   selected={true},
-   pdf={Sharma21icra.pdf},
-   code = {https://github.com/rpl-cmu/object-slam},
-   teaser = {object_slam.gif},
-   author = {A. Sharma and W. Dong and M. Kaess},
-   title = {Compositional and Scalable Object {SLAM}},
-  abstract={We present a fast, scalable, and accurate Simultaneous Localization and Mapping (SLAM) system that represents indoor scenes as a graph of objects. Leveraging the observation that artificial environments are structured and occupied by recognizable objects, we show that a compositional and scalable object mapping formulation is amenable to a robust SLAM solution for drift-free large-scale indoor reconstruction. To achieve this, we propose a novel semantically assisted data association strategy that results in unambiguous persistent object landmarks and a 2.5D compositional rendering method that enables reliable frame-to-model RGB-D tracking. Consequently, we deliver an optimized online implementation that can run at near frame rate with a single graphics card, and provide a comprehensive evaluation against state-of-the-art baselines. An open-source implementation will be provided at https://github.com/rpl-cmu/object-slam.},
-   booktitle = {Proc. IEEE Intl. Conf. on Robotics and Automation, ICRA},
-   address = {Xi'an, China},
-   month = may,
-   year = {2021}
+    abbr = {ICRA},
+    selected = {true},
+    pdf = {Sharma21icra.pdf},
+    code = {https://github.com/rpl-cmu/object-slam},
+    teaser = {object_slam.gif},
+    author = {A. Sharma and W. Dong and M. Kaess},
+    title = {Compositional and Scalable Object {SLAM}},
+    abstract = {We present a fast, scalable, and accurate Simultaneous
+                Localization and Mapping (SLAM) system that represents indoor
+                scenes as a graph of objects. Leveraging the observation that
+                artificial environments are structured and occupied by
+                recognizable objects, we show that a compositional and scalable
+                object mapping formulation is amenable to a robust SLAM solution
+                for drift-free large-scale indoor reconstruction. To achieve this
+                , we propose a novel semantically assisted data association
+                strategy that results in unambiguous persistent object landmarks
+                and a 2.5D compositional rendering method that enables reliable
+                frame-to-model RGB-D tracking. Consequently, we deliver an
+                optimized online implementation that can run at near frame rate
+                with a single graphics card, and provide a comprehensive
+                evaluation against state-of-the-art baselines. An open-source
+                implementation will be provided at
+                https://github.com/rpl-cmu/object-slam.},
+    booktitle = {Proc. IEEE Intl. Conf. on Robotics and Automation, ICRA},
+    address = {Xi'an, China},
+    month = may,
+    year = {2021},
 }
 
 @thesis{Akash-Sharma-2021-127395,
@@ -26,5 +41,17 @@
     school = {Carnegie Mellon University},
     address = {Pittsburgh, PA},
     number = {CMU-RI-TR-21-18},
-    keywords = {Semantic SLAM, SLAM, Instance Segmentation, Dense reconstruction},
+    keywords = {Semantic SLAM, SLAM, Instance Segmentation, Dense reconstruction
+                },
+}
+
+@article{1638022,
+    author = {Durrant-Whyte, H. and Bailey, T.},
+    journal = {IEEE Robotics Automation Magazine},
+    title = {Simultaneous localization and mapping: part I},
+    year = {2006},
+    volume = {13},
+    number = {2},
+    pages = {99-110},
+    doi = {10.1109/MRA.2006.1638022},
 }
