--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,38 @@
 ---
 ---
 
+@inproceedings{Xu22iros,
+    abbr = {IROS},
+    pdf = {Xu22iros.pdf},
+    author = {R. Xu and W. Dong and A. Sharma and M. Kaess},
+    title = {Learned Depth Estimation of {3D} Imaging Radar for Indoor Mapping},
+    abstract = {3D imaging radar offers robust perception capability through
+                visually demanding environments due to the unique penetrative and
+                reflective properties of millimeter waves (mmWave). Current
+                approaches for 3D perception with imaging radar require knowledge
+                of environment geometry, accumulation of data from multiple
+                frames for perception, or access to between-frame motion. Imaging
+                radar presents an additional difficulty due to the complexity of
+                its data representation. To address these issues, and make
+                imaging radar easier to use for downstream robotics tasks, we
+                propose a learning-based method that regresses radar measurements
+                into cylindrical depth maps using LiDAR supervision. Due to the
+                limitation of the regression formulation, directions where the
+                radar beam could not reach will still generate a valid depth. To
+                address this issue, our method additionally learns a 3D filter to
+                remove those pixels. Experiments show that our system generates
+                visually accurate depth estimation. Furthermore, we confirm the
+                overall ability to generalize in the indoor scene using the
+                estimated depth for probabilistic occupancy mapping with ground
+                truth trajectory.},
+    booktitle = {Proc. IEEE/RSJ Intl. Conf. on Intelligent Robots and Systems,
+                 IROS},
+    address = {Kyoto, Japan},
+    month = oct,
+    year = {2022},
+    note = {To appear},
+}
+
 @inproceedings{Sharma21icra,
     abbr = {ICRA},
     selected = {true},
