update bib to be consistent

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,7 +30,7 @@
 @inproceedings{Xu22iros,
     abbr = {IROS},
     pdf = {Xu22iros.pdf},
-    author = {R. Xu and W. Dong and A. Sharma and M. Kaess},
+    author = {Ruoyang Xu and Wei Dong and Akash Sharma and Michael Kaess},
     title = {Learned Depth Estimation of {3D} Imaging Radar for Indoor Mapping},
     abstract = {3D imaging radar offers robust perception capability through
                 visually demanding environments due to the unique penetrative and
@@ -65,7 +65,7 @@
     pdf = {Sharma21icra.pdf},
     code = {https://github.com/rpl-cmu/object-slam},
     teaser = {object_slam.gif},
-    author = {A. Sharma and W. Dong and M. Kaess},
+    author = {Akash Sharma and Wei Dong and Michael Kaess},
     title = {Compositional and Scalable Object {SLAM}},
     abstract = {We present a fast, scalable, and accurate Simultaneous
                 Localization and Mapping (SLAM) system that represents indoor
