Add publication thumbnails + change font + fix strong text font

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,7 @@
----
----
----
----
 @inproceedings{Chang_2023_ICCV,
     abbr = {ICCV},
     pdf = {Chang23iccv.pdf},
+    preview = {nerf_lidar.png},
     author    = {Chang, MingFang and Sharma, Akash and Kaess, Michael and Lucey, Simon},
     title     = {Neural Radiance Field with LiDAR maps},
     abstract  = {We address outdoor Neural Radiance Fields (NeRF) with LiDAR maps. 
@@ -21,7 +18,7 @@
                  to show the substantial applicability of our system, we demonstrate that our system can be used in 
                  data augmentation for training a pose regression network and multi-season view synthesis. 
                  Our dataset and code will be released.},
-    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+    booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision, ICCV},
     month     = {October},
     year      = {2023},
     pages     = {17914-17923}
@@ -62,6 +59,7 @@
 @inproceedings{Sharma21icra,
     abbr = {ICRA},
     selected = {true},
+    preview = {object_slam.gif},
     pdf = {Sharma21icra.pdf},
     code = {https://github.com/rpl-cmu/object-slam},
     teaser = {object_slam.gif},
