--- a/assets/bibliography/2024-07-14-imu-navigation.bib
+++ b/assets/bibliography/2024-07-14-imu-navigation.bib
@@ -20,3 +20,10 @@
   journal={arXiv preprint arXiv:1812.01537},
   year={2018}
 }
+@misc{hairy2024wiki,
+    author = "{Wikipedia contributors}",
+    title = "Hairy ball theorem --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Hairy_ball_theorem&oldid=1227256650}",
+    note = "[Online; accessed 27-July-2024]"
+}
