--- a/assets/bibliography/2024-07-14-imu-navigation.bib
+++ b/assets/bibliography/2024-07-14-imu-navigation.bib
@@ -21,9 +21,16 @@
   year={2018}
 }
 @misc{hairy2024wiki,
-    author = "{Wikipedia contributors}",
-    title = "Hairy ball theorem --- {Wikipedia}{,} The Free Encyclopedia",
-    year = "2024",
-    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Hairy_ball_theorem&oldid=1227256650}",
-    note = "[Online; accessed 27-July-2024]"
+  author={Wikipedia contributors},
+  title={Hairy ball theorem --- Wikipedia, The Free Encyclopedia},
+  year={2024},
+  url={https://en.wikipedia.org/w/index.php?title=Hairy_ball_theorem&oldid=1227256650},
+  note={[Online; accessed 27-July-2024]}
+}
+@misc{rodrigues2024wiki,
+  author={Wikipedia contributors},
+  title={Rodrigues' rotation formula --- Wikipedia, The Free Encyclopedia},
+  year={2024},
+  url={https://en.wikipedia.org/w/index.php?title=Rodrigues%27_rotation_formula&oldid=1224740055},
+  note={[Online; accessed 27-July-2024]}
 }
