--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,30 @@
+@misc{yin2025dexteritygen,
+    abbr = {arXiv}, 
+
+    title={DexterityGen: Foundation Controller for Unprecedented Dexterity}, 
+    author={Zhao-Heng Yin and Changhao Wang and Luis Pineda and Francois Hogan and Krishna Bodduluri and Akash Sharma and Patrick Lancaster and Ishita Prasad and Mrinal Kalakrishnan and Jitendra Malik and Mike Lambeta and Tingfan Wu and Pieter Abbeel and Mustafa Mukadam},
+    year={2025},
+    preview = {dexteritygen.gif},
+    html = {https://zhaohengyin.github.io/dexteritygen/},
+    eprint={2502.04307},
+    archivePrefix={arXiv},
+    primaryClass={cs.RO},
+    abstract={
+    Teaching robots dexterous manipulation skills, such as tool use, presents a significant challenge. 
+    Current approaches can be broadly categorized into two strategies: human teleoperation (for imitation learning)
+     and sim-to-real reinforcement learning. The first approach is difficult as it is hard for humans to produce safe and dexterous motions on a different embodiment without touch feedback. 
+     The second RL-based approach struggles with the domain gap and involves highly task-specific reward engineering on complex tasks. 
+     Our key insight is that RL is effective at learning low-level motion primitives, while humans excel at providing coarse motion commands for complex, long-horizon tasks. 
+     Therefore, the optimal solution might be a combination of both approaches. 
+     In this paper, we introduce DexterityGen (DexGen), which uses RL to pretrain large-scale dexterous motion primitives, such as in-hand rotation or translation. 
+     We then leverage this learned dataset to train a dexterous foundational controller. 
+     In the real world, we use human teleoperation as a prompt to the controller to produce highly dexterous behavior. 
+     We evaluate the effectiveness of DexGen in both simulation and real world, demonstrating that it is a general-purpose controller that can realize input dexterous manipulation 
+     commands and significantly improves stability by 10-100x measured as duration of holding objects across diverse tasks. 
+     Notably, with DexGen we demonstrate unprecedented dexterous skills including diverse object reorientation and dexterous tool use such as pen, syringe, and screwdriver for the first time. 
+    },
+    url={https://arxiv.org/abs/2502.04307}, 
+}
 @inproceedings{higuera2024sparsh,
     abbr = {CoRL},
     pdf = {sparsh.pdf},
